--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
 <body class="">
 <div class="container-fluid bg-img">
   <div class="d-flex align-items-center justify-content-center" style="height:100vh">
-     <div class="card col-lg-4 col-10 col-sm-6 f-ply bg-translit px-5" id="myDIV1">
-      <h6 class="text-center text-success mb-0"><b>
-       </b></h6>
+     <div class="card col-lg-4 col-10 col-sm-6 f-ply bg-translit px-2" id="myDIV1">
+      <h6 class="text-center text-success mb-0"><marquee direction="right"><img src="assets/images/gif.gif" style="height:40px;width: 80px"></marquee></h6>
        <form action="" method="post">
-         <h4 class="text-center my-3 border-bottom pb-3">Login</h4>
+         <h4 class="text-center mb-3 border-bottom pb-3">Login</h4>
          <div class="form-group">
           <label>Mobile No:</label>
           <input type="mobile" class="form-control" name="mob" required>
@@ -32,19 +31,18 @@
           <input type="password" class="form-control" name="pass" required>
           </div>
           <div class="form-group text-center py-2">
-            <button class="btn btn-info w-100" type="submit">Submit</button>
+            <button class="btn btn-info bg-blue w-100" type="submit">Submit</button>
           </div>
           <div class="form-group text-center">
             <a href="">Forgot Password?</a>
           </div>
           <div class="form-group text-center">
-            <a class="text-danger" href="#" onclick="myFun2()"><b>Not a member? Signup</b></a>
+            <a class="text-blue" href="#" onclick="myFun2()"><b>Not a member? Signup</b></a>
           </div>
         </form>
     </div>
     <div class="card col-lg-4 col-10 col-sm-6 position-absolute f-ply bg-translit px-5" id="myDIV2" style="display: none;">
-      <h6 class="text-center text-success mb-0"><b>
-       </b></h6>
+      <h6 class="text-center text-success mb-0"></h6>
        <form action="saveuser.php" method="post" enctype="multipart/form-data">
          <h4 class="text-center my-3 border-bottom pb-3">Signup</h4>
          <div class="form-group">
@@ -64,10 +62,10 @@
           <input type="file" class="form-control" name="imag" required>
           </div>
           <div class="form-group text-center py-2">
-            <button class="btn btn-info w-100" type="submit">Submit</button>
+            <button class="btn btn-info bg-blue w-100" type="submit">Submit</button>
           </div>
           <div class="form-group text-center">
-            <a class="text-danger" href="#" onclick="myFun1()"><b>Already have An Account? Login</b></a>
+            <a class="text-blue" href="#" onclick="myFun1()"><b>Already have An Member? Login</b></a>
           </div>
         </form>
     </div>
