mobile input box style add

--- a/home.html
+++ b/home.html
@@ -62,27 +62,19 @@
 </nav>
 <div class="container-fluid bg-img">
   <div class="d-flex align-items-center justify-content-center" style="height:100vh">
-     <div class="card col-lg-4 col-10 col-sm-8 f-ply bg-translit px-5">
-      <h6 class="text-center text-success mb-0"><b>
-       </b></h6>
+     <div class="card col-lg-4 col-11 col-sm-8 f-ply rounded-0">
        <form action="usercheck.php" method="post">
-         <h4 class="text-center my-3 border-bottom pb-3">Login</h4>
-         <div class="form-group">
-          <label>Mobile No:</label>
-          <input type="mobile" class="form-control" name="mob" required>
-          </div>
-          <div class="form-group">
-          <label>Password:</label>
-          <input type="password" class="form-control" name="pass" required>
+         <h4 class="text-center my-3 pb-1">Let's find your ideal Car</h4>
+         <div class="form-row">
+           <div class="form-group col">
+              <input type="mobile" class="form-control" name="mob" required>
+            </div>
+            <div class="form-group col">
+              <input type="password" class="form-control" name="pass" required>
+            </div>
           </div>
           <div class="form-group text-center py-2">
             <button class="btn btn-info w-100" type="submit">Submit</button>
-          </div>
-          <div class="form-group text-center">
-            <a href="">Forgot Password?</a>
-          </div>
-          <div class="form-group text-center">
-            <a class="text-danger" href="#"><b>Not a member? Signup</b></a>
           </div>
         </form>
     </div>
