--- a/car_type.html
+++ b/car_type.html
@@ -71,12 +71,12 @@
      <div class="row m-0 px-1">
        <div class="col-5 p-0">
          <p class="mb-0">Pick-up</p>
-         <p class="mb-0 text-muted text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
+         <p class="mb-0 text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
        </div>
        <div class="col-1 p-0 d-flex align-items-center"><img src="assets/images/right.png" style="height: 30px;width: 30px"></div>
        <div class="col-6 p-0">
          <p class="mb-0">Drop-off</p>
-         <p class="mb-0 text-muted text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
+         <p class="mb-0 text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
        </div>
      </div>
    </div>
