--- a/car_type.html
+++ b/car_type.html
@@ -68,7 +68,7 @@
   <br>
   <br>
    <div class="card rounded-0 f-ply mb-3 sd2">
-     <div class="row m-0 px-1">
+     <div class="row m-0 px-2 py-2">
        <div class="col-5 p-0">
          <p class="mb-0">Pick-up</p>
          <p class="mb-0 text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
@@ -80,7 +80,7 @@
        </div>
      </div>
    </div>
-   <div class="card rounded-0 sd2">
+   <div class="card rounded-0 px-2 py-2 sd2">
      3
    </div>
 </div>
