--- a/car_type.html
+++ b/car_type.html
@@ -67,22 +67,168 @@
   <br>
   <br>
   <br>
-   <div class="card rounded-0 f-ply mb-3 sd2">
+   <div class="card rounded-0 col-md-8 offset-md-2 f-ply mb-3 sd2">
      <div class="row m-0 px-2 py-2">
        <div class="col-5 p-0">
          <p class="mb-0">Pick-up</p>
-         <p class="mb-0 text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
+         <p class="mb-0 text-truncate text-lig"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
        </div>
        <div class="col-1 p-0 d-flex align-items-center"><img src="assets/images/right.png" style="height: 30px;width: 30px"></div>
        <div class="col-6 p-0">
          <p class="mb-0">Drop-off</p>
-         <p class="mb-0 text-truncate"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
+         <p class="mb-0 text-truncate text-lig"><b>Jeddah King Abdulaziz International Airport - Terminal </b></p>
        </div>
      </div>
    </div>
-   <div class="card rounded-0 px-2 py-2 sd2">
-     3
-   </div>
+   <!--------------------------mobile Ui start-------------------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-none">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-4 p-0 d-flex align-items-center">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-6 p-0 px-1 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 20px;width: 20px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 20px;width: 20px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 20px;width: 20px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 20px;width: 20px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 20px;width: 20px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 20px;width: 20px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col-2 p-0 shadow d-flex justify-content-center align-items-center">
+         <b class="text-info">Small Car</b>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <!--------------------------mobile Ui close-------------------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 15px;width: 15px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 15px;width: 15px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
+         <b class="text-info">Small Car</b>
+       </div>
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+
+   <!--------------------------Website Ui start-------------------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-4 p-0 d-flex align-items-center">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-6 p-0 px-1 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 20px;width: 20px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 20px;width: 20px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 20px;width: 20px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 20px;width: 20px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 20px;width: 20px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 20px;width: 20px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col-2 p-0 shadow d-flex justify-content-center align-items-center">
+         <b class="text-info">Small Car</b>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-4 p-0 d-flex align-items-center">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-6 p-0 px-1 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 20px;width: 20px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 20px;width: 20px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 20px;width: 20px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 20px;width: 20px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 20px;width: 20px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 20px;width: 20px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col-2 p-0 shadow d-flex justify-content-center align-items-center">
+         <b class="text-info">Small Car</b>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <!--------------------------Website Ui close-------------------->
 </div>
 
 <script>
