--- a/car_type.html
+++ b/car_type.html
@@ -63,7 +63,7 @@
     </div> 
 </nav>
 
-<div class="container-fluid bg-img2">
+<div class="container-fluid bg-img2 pb-4">
   <br>
   <br>
   <br>
@@ -151,7 +151,151 @@
        </div><!--------------col-6 close---------->
        <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
          <b class="text-info">Small Car</b>
-       </div>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 15px;width: 15px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 15px;width: 15px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
+         <b class="text-info">Compact Car</b>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 15px;width: 15px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 15px;width: 15px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
+         <b class="text-info">Standard Car</b>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 15px;width: 15px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 15px;width: 15px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
+         <b class="text-info">Luxury Car</b>
+       </div><!--------------col-2 close---------->
+     </div><!--------------row close---------->
+   </div><!--------------card close---------->
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+     <div class="row m-0 px-2 py-2 text-lig">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
+         <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
+       </div><!--------------col-4 close---------->
+       <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/seat.png" style="height: 15px;width: 15px"> <label>4 Seats</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/door.png" style="height: 15px;width: 15px"> <label>4 Doors</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/big-bag.png" style="height: 15px;width: 15px"> <label>1 large bag</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/small-bag.png" style="height: 15px;width: 15px"> <label>1 small bag</label>
+            </div>
+          </div>
+          <div class="form-row">
+           <div class="col">
+             <img src="assets/images/air.png" style="height: 15px;width: 15px"> <label>Ac</label>
+           </div>
+            <div class="col">
+              <img src="assets/images/gears.png" style="height: 15px;width: 15px"> <label>Automatic</label>
+            </div>
+          </div>
+       </div><!--------------col-6 close---------->
+       <div class="col col-sm-2 p-0 px-1 py-1 sd3 border d-flex justify-content-center align-items-center">
+         <b class="text-info">SUV's Car</b>
+       </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
 
