--- a/car_type.html
+++ b/car_type.html
@@ -83,7 +83,7 @@
    <!--------------------------mobile Ui start-------------------->
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-12 col-sm-3 p-0 d-flex align-items-center justify-content-center border-bottom">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
@@ -119,7 +119,7 @@
    </div><!--------------card close---------->   
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-12 col-sm-3 p-0 d-flex align-items-center justify-content-center border-bottom">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/compact.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
@@ -155,7 +155,7 @@
    </div><!--------------card close---------->
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-12 col-sm-3 p-0 d-flex align-items-center justify-content-center border-bottom">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
@@ -191,7 +191,7 @@
    </div><!--------------card close---------->
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-12 col-sm-3 p-0 d-flex align-items-center justify-content-center border-bottom">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/luxury.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
@@ -227,7 +227,7 @@
    </div><!--------------card close---------->
    <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
      <div class="row m-0 px-2 py-2 text-lig">
-       <div class="col-12 col-sm-3 p-0 d-flex align-items-center justify-content-center border-bottom">
+       <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/suv.jpg" class="" style="height: 93px;width: 140px">
        </div><!--------------col-4 close---------->
        <div class="col-12 col-sm-7 p-0 px-3 py-1 text-justify">
