--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@
 <div class="container-fluid bg-img">
   <div class="d-flex align-items-center justify-content-center" style="height:100vh">
      <div class="card col-lg-5 col-12 col-sm-8 f-ply rounded-0 bg-lightsky">
-       <form action="usercheck.php" method="post">
+       <form action="#" method="post">
          <h4 class="text-center my-3 pb-1">Let's find your ideal Car</h4>
          <div class="form-row">
            <div class="form-group col">
@@ -104,7 +104,7 @@
             </div>
           </div>
           <div class="form-group text-center py-2">
-            <button class="btn btn-default bg-blue text-white w-100" type="submit"><b>Search</b></button>
+            <button class="btn btn-default bg-blue text-white w-100" onclick="window.location.href='car_type.html'" type="submit"><b>Search</b></button>
           </div>
         </form>
     </div>
