--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <input type="password" class="form-control" name="pass" required>
           </div>
           <div class="form-group text-center py-2">
-            <button class="btn btn-info bg-blue w-100" type="submit">Submit</button>
+            <button class="btn btn-info bg-blue w-100"  onclick="window.location.href='home.html'"  type="submit">Submit</button>
           </div>
           <div class="form-group text-center">
             <a href="">Forgot Password?</a>
@@ -67,7 +67,7 @@
           <input type="file" class="form-control" name="imag" required>
           </div>
           <div class="form-group text-center py-2">
-            <button class="btn btn-info bg-blue w-100" type="submit">Submit</button>
+            <button class="btn btn-info bg-blue w-100" onclick="window.location.href='home.html'" type="submit">Submit</button>
           </div>
           <div class="form-group text-center">
             <a class="text-blue" href="#" onclick="myFun1()"><b>Already have An Member? Login</b></a>
