--- a/car_type.html
+++ b/car_type.html
@@ -81,7 +81,7 @@
      </div>
    </div>
    <!--------------------------mobile Ui start-------------------->
-   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
@@ -117,7 +117,7 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->   
-   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/compact.jpg" class="" style="height: 93px;width: 140px">
@@ -153,7 +153,7 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
-   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/standard.jpg" class="" style="height: 93px;width: 140px">
@@ -189,7 +189,7 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
-   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/luxury.jpg" class="" style="height: 93px;width: 140px">
@@ -225,7 +225,7 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
-   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-1 py-2 mb-4 sd2 d-block d-md-none f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-12 col-sm-3 p-0 d-flex align-items-center border-bottom">
          <img src="assets/images/suv.jpg" class="" style="height: 93px;width: 140px">
@@ -264,7 +264,7 @@
    <!--------------------------mobile Ui close-------------------->
 
    <!--------------------------Website Ui start-------------------->
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-4 p-0 d-flex align-items-center">
          <img src="assets/images/small.jpg" class="" style="height: 93px;width: 140px">
@@ -300,7 +300,7 @@
        </div><!--------------col-2 close---------->
      </div><!--------------row close---------->
    </div><!--------------card close---------->
-   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block">
+   <div class="card rounded-0 col-md-8 offset-md-2 px-2 py-2 mb-4 sd2 d-none d-md-block f-cga">
      <div class="row m-0 px-2 py-2 text-lig">
        <div class="col-4 p-0 d-flex align-items-center">
          <img src="assets/images/compact.jpg" class="" style="height: 93px;width: 140px">
